[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopRow" type="HBoxContainer" parent="Root"]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 860.0
offset_bottom = 42.0
theme_override_constants/separation = 18

[node name="HealthLabel" type="Label" parent="Root/TopRow"]
layout_mode = 2
text = "HP: 0/0"

[node name="WaveLabel" type="Label" parent="Root/TopRow"]
layout_mode = 2
text = "Wave: 1"

[node name="KillLabel" type="Label" parent="Root/TopRow"]
layout_mode = 2
text = "Kills: 0"

[node name="TimerLabel" type="Label" parent="Root/TopRow"]
layout_mode = 2
text = "Time: 0.0s"

[node name="PauseHint" type="Label" parent="Root"]
layout_mode = 2
offset_left = 12.0
offset_top = 52.0
offset_right = 260.0
offset_bottom = 72.0
text = "Press P to Pause"

[node name="GameOverPanel" type="Panel" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -115.0
offset_right = 170.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Root/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOverText" type="Label" parent="Root/GameOverPanel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
text = "Game Over"

[node name="RetryButton" type="Button" parent="Root/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MenuButton" type="Button" parent="Root/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "BackToMenu"
